Add Jetty12 EE10 API support in Java AppEngine runtime.
PiperOrigin-RevId: 578195855
Change-Id: I0d6eb542f44275ec662deb9b11d7b1e58ea849df